--- a/MVCApp/MVCApp.csproj
+++ b/MVCApp/MVCApp.csproj
@@ -207,6 +207,7 @@
     <Content Include="Views\Offer\Detail.cshtml" />
     <Content Include="Views\Error\Index.cshtml" />
     <Content Include="Views\Postulation\List.cshtml" />
+    <Content Include="Views\Postulation\ApplyForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
