--- a/MVCApp/bin/MVCApp.dll.config
+++ b/MVCApp/bin/MVCApp.dll.config
@@ -84,7 +84,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="ChomageSharpDb"
-    connectionString='Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Travail\ChomageLibrary\ChomageLibrary2\BorelJamaisPresentDatabase.mdf;Integrated Security=True'
+    connectionString='Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\hylow\Desktop\ChomageSharp\ChomageLibrary2\BorelJamaisPresentDatabase.mdf;Integrated Security=True'
     providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
